<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Phaze</string>
    <string name="connect">Connect To Myo</string>
    <string name="disconnect">Disconnect To Myo</string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="gallery">Gallery</string>
    <string name="settings">Settings</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="pose">Pose</string>
    <string-array name="sortMusic_array">
        <item>Track Name</item>
        <item>Artist</item>
        <item>Album</item>
        <item>Year</item>
    </string-array>
    <string name="title_activity_video_player">VideoPlayer</string>
</resources>