<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="teamb.minicap.phaze.MainActivity"
    android:id="@+id/main"
    android:background="@color/background">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:id="@+id/connect"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="connect"
        android:background="@drawable/button_active"
        android:textColor="@color/button_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music"
        android:id="@+id/music"
        android:onClick="music"
        android:background="@drawable/button_active"
        android:layout_below="@+id/connect"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp"
        android:layout_alignParentEnd="true"
        android:textColor="@color/button_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video"
        android:id="@+id/video"
        android:onClick="video"
        android:background="@drawable/button_active"
        android:layout_below="@+id/music"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp"
        android:layout_alignParentEnd="true"
        android:textColor="@color/button_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:id="@+id/gallery"
        android:onClick="gallery"
        android:background="@drawable/button_active"
        android:layout_below="@+id/video"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp"
        android:layout_alignParentEnd="true"
        android:textColor="@color/button_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/settings"
        android:onClick="settings"
        android:background="@drawable/button_active"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/button_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect"
        android:id="@+id/disconnect"
        android:onClick="disconnect"
        android:background="@drawable/button_active"
        android:textColor="@color/button_text"
        android:layout_below="@+id/gallery"
        android:layout_marginTop="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
